--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
       <p>
         A responsive Amazon clone built with HTML and CSS, focusing on accurate layout and UI.
       </p>
-      <a href="https://vaishali-gosavi09.github.io/amazon-clone/" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/amazon-clone/" target="_blank" class="btn">View Project</a>
     </div>
 
     <div class="project-card">
       <h3>Portfolio Website</h3>
       <span class="tech">HTML & CSS</span>
       <p>Personal portfolio website showcasing skills and projects.</p>
-      <a href="https://vaishali-gosavi09.github.io/amazon-clone/" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/amazon-clone/" target="_blank" class="btn">View Project</a>
     </div>
 
         <div class="project-card">
@@ -160,7 +160,7 @@
       <p>
         Interactive game with real-time results and smooth user interaction.
       </p>
-      <a href="https://vaishali-gosavi09.github.io/rock-paper-scissors/" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/rock-paper-scissors/" target="_blank" class="btn">View Project</a>
     </div>
 
         <div class="project-card">
@@ -169,7 +169,7 @@
       <p>
         Classic Tic Tac Toe game with turn-based logic and win detection.
       </p>
-      <a href="https://vaishali-gosavi09.github.io/tic-tac-toe/" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/tic-tac-toe/" target="_blank"class="btn">View Project</a>
     </div>
 
     <div class="project-card">
@@ -183,7 +183,7 @@
       <h3>Landing Page</h3>
       <span class="tech">HTML & CSS</span>
       <p>Responsive landing page designed for lead generation.</p>
-      <a href="https://vaishali-gosavi09.github.io/movie-landing-page/" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/movie-landing-page/" target="_blank" class="btn">View Project</a>
     </div>
 
 
@@ -199,4 +199,5 @@
 
 </body>
 </html>
+
 
