--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h3>Portfolio Website</h3>
       <span class="tech">HTML & CSS</span>
       <p>Personal portfolio website showcasing skills and projects.</p>
-      <a href="https://vaishali-gosavi09.github.io/amazon-clone/" target="_blank" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/portfolio/" target="_blank" class="btn">View Project</a>
     </div>
 
         <div class="project-card">
@@ -199,5 +199,6 @@
 
 </body>
 </html>
+
 
 
