--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <p>
         A responsive Amazon clone built with HTML and CSS, focusing on accurate layout and UI.
       </p>
-      <a href="https://vaishali-gosavi09.github.io/amazon-clone/" target="_blank" class="btn">View Project</a>
+      <a href="https://vaishali-gosavi09.github.io/ecommerce-frontend-project/" target="_blank" class="btn">View Project</a>
     </div>
 
     <div class="project-card">
@@ -199,6 +199,7 @@
 
 </body>
 </html>
+
 
 
 
