--- a/index.html
+++ b/index.html
@@ -194,11 +194,12 @@
   <!-- CONTACT -->
   <section class="contact">
     <h2>Let’s Work Together</h2>
-    <p>Email: vaishaligosavi160@gmail.com</p>
+    <p><a href= "mailto:vaishaligosavi160@gmail.com">Email: vaishaligosavi160@gmail.com</a></p>
   </section>
 
 </body>
 </html>
+
 
 
 
